# InterShareSDK

./: .gitignore  Cargo.toml  Package.swift  config.toml  generate-csharp.ps1  generate-swift.sh  setup.ps1  setup.sh
.github/workflows/: ci.yml  deploy.yml
bindings/csharp/InterShareSdk/: Corrections.cs  InterShareSDK.cs  InterShareSdk.csproj
bindings/csharp/Tests/: DiscoveryTests.cs  NearbyServerTests.cs
bindings/kotlin/: build.gradle
bindings/kotlin/InterShareSDK/: build.gradle
bindings/kotlin/InterShareSDK/src/main/java/com/julian_baumann/intershare_sdk/: NearbyServer.kt
bindings/kotlin/InterShareSDK/src/main/java/com/julian_baumann/intershare_sdk/bluetoothLowEnergy/: BLECentralManager.kt  BLEPeripheralManager.kt  L2CAPClientManager.kt
bindings/swift/Sources/InterShareKit/: Discovery.swift  InterShareSDK.swift  NearbyServer.swift
bindings/swift/Sources/InterShareKit/BluetoothLowEnergy/: BLEClientManager.swift  BLEPeripheralManager.swift  Constants.swift  L2CAPClient.swift  L2CAPStream.swift
bindings/swift/Tests/DataRCTTests/: DataRCTTests.swift
src/intershare_sdk/: Cargo.toml  build.rs  uniffi.toml
src/intershare_sdk/src/: communication.rs  connection.rs  connection_request.rs  discovery.rs  encryption.rs  errors.rs  intershare_sdk.udl  lib.rs  nearby.rs  nearby_server.rs  progress.rs  share_store.rs  stream.rs  tar.rs  zip.rs
src/intershare_sdk/src/transmission/: mod.rs  tcp.rs
src/intershare_sdk/src/windows/: ble_client.rs  ble_server.rs  mod.rs
src/intershare_sdk_ffi/: Cargo.toml  uniffi.toml
src/intershare_sdk_ffi/src/: async_code.rs  intershare_sdk.udl  lib.rs
src/intershare_windows/: Cargo.toml  uniffi-bindgen.rs
src/intershare_windows/src/: nearby_server.rs
src/intershare_windows/src/ble/: ble_client.rs  ble_server.rs
src/intershare_windows/tests/: discovery.rs  nearby.rs
src/protocol/: Cargo.toml
src/protocol/src/: communication.proto  discovery.proto  lib.rs
src/windows/: Cargo.toml  build.rs
src/windows/src/: discovery.rs  lib.rs
src/windows/src/ble/: ble_client.rs
src/windows/tests/: discovery.rs  nearby.rs
