[package]
name = "intershare_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
x25519-dalek = { version = "2.0.1", default-features = false }
chacha20 = { version = "0.9.0" }
chacha20poly1305 = { version = "^0.10", default-features = false, features = ["stream", "rand_core"] }
uuid = { version = "1.2.0", default-features = false, features = ["v4", "fast-rng"]}
rand_core = { version = "0.6", default-features = false }
thiserror = { version = "2.0.11", default-features = false }
tokio = {  version = "1.35.1", default-features = false, features = ["net", "io-util", "time", "sync", "rt", "rt-multi-thread", "macros"] }
local-ip-address = { git = "https://github.com/julian-baumann/local-ip-address.git", rev = "4fa3e37" }
prost-stream = { git = "https://github.com/InterShare/prost-stream.git", rev = "8a35d31", default-features = false }
android_logger = { version = "0.13.3", default-features = false }
log = { version = "0.4.20", default-features = false }
tempfile = { version = "3", default-features = false }
zip = { version = "2.2.2", default-features = false, features = ["deflate", "deflate64", "lzma", "time", "zstd"]}
simplelog = { version = "0.12.2", default-features = false }
directories = { version = "5.0", default-features = false }
walkdir = { version = "2.5", default-features = false }
url = { version = "2.5.4", default-features = false }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
fast_qr = { version = "0.12.7", default-features = false, features = ["image"]}

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Devices_Bluetooth", "Devices_Bluetooth_Advertisement", "Devices_Bluetooth_GenericAttributeProfile", "Foundation", "Storage_Streams", "Devices_Radios", "Win32_Networking_WinSock", "Win32_System_WinRT", "implement", "Foundation_Collections", "Win32_System_Com"] }
winapi = { version = "0.3.9", features = ["winsock2"] }
widestring = "1.1.0"
futures = "0.3.31"
dirs = "5.0.1"
