[package]
name = "intershare_sdk_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
intershare_sdk = { package = "intershare_sdk", path = "../intershare_sdk" }
uniffi = { version = "0.28", features = ["cli", "tokio", "default"] }
tokio = { version = "1.35.1", features = ["sync"] }

[build-dependencies]
uniffi = { version = "0.28",  features = ["build"] }
