[package]
name = "windows"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
common = { package = "common", path = "../common" }
tokio = { version = "1.35.1", features = ["sync", "rt-multi-thread", "macros"] }
windows = { version = "0.58.0", features = ["Devices_Bluetooth", "Devices_Bluetooth_Advertisement", "Devices_Bluetooth_GenericAttributeProfile", "Foundation", "Storage_Streams", "Devices_Radios", "Win32_Networking_WinSock", "Win32_System_WinRT", "implement", "Foundation_Collections", "Win32_System_Com"] }
winapi = { version = "0.3.9", features = ["winsock2"] }
widestring = "1.1.0"
futures = "0.3.31"
dirs = "5.0.1"
uniffi = { version = "0.28.3", features = ["cli", "tokio", "default"] }

[target.'cfg(windows)'.build-dependencies]
uniffi = { version = "0.28.3",  features = ["build"] }
